# univa

./: .env  .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  requirements_simple.txt
apps/web/: .env.example  package.json
apps/web/src/app/: globals.css  metadata.ts
apps/web/src/app/chat/: page.tsx
apps/web/src/components/: chat-settings.tsx  editor-header.tsx  footer.tsx  header.tsx  onboarding.tsx
apps/web/src/constants/: site.ts
apps/web/src/lib/: config.ts
apps/web/src/stores/: project-store.ts
univa/: univa_agent.py  univa_server.py
univa/auth/: __init__.py  admin_commands.py  auth_service.py  middleware.py  models.py
univa/config/: config.py  mcp_configs.json
univa/config/mcp_tools_config/: config.yaml
univa/mcp_tools/: audio_gen.py  base.py  image_gen.py  video_editing.py  video_gen.py  video_tracking.py  video_understanding.py
univa/prompts/: plan.txt
univa/prompts/generation/: audio_prompt.txt  character_appearance.txt  character_prompt_refine.txt  i2v_refine_prompt.txt  image_refine_prompt.txt  keyframe_refine.txt  speech_prompt.txt  split_screen_prompt.txt  t2v_refine_prompt.txt
univa/prompts/track/: ground_dino_check_prompt.txt  temporal_grounding.txt  text2object_for_ground_dino.txt
univa/prompts/understanding/: director_check.txt  image_caption.txt  seg_analysis.txt  seg_and_edit.txt  video_caption.txt  video_extension_en.txt  video_style_analysis.txt
univa/utils/: image_process.py  image_upload.py  model_factory.py  probing.py  query_llm.py  video_process.py  wavespeed_api.py
(+43 files in other folders)
