[project]
name = "univa"
version = "0.1.0"
description = "Universal Video Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.1.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
    "mcp>=1.2.1",
    "aiofiles>=24.1.0",
    "loguru>=0.7.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
]

[tool.setuptools.packages.find]
include = ["univa"]